[project]
name = "tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "openai>=1.97.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
